replaced badgerdb with mongodb
