# server/docs/swagger.json
@@ -16,9 +16,9 @@
     "host": "localhost:8081",
     "basePath": "/api/v1",
     "paths": {
-        "/transcode/{cid}": {
+        "/transcode/{id}": {
             "get": {
-                "description": "Get transcode status by CID.",
+                "description": "Get transcode status by ID.",
                 "produces": [
                     "application/json"
                 ],
@@ -29,8 +29,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "CID",
-                        "name": "cid",
+                        "description": "ID",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -39,17 +39,17 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/transcoder.TranscodeStatus"
+                            "$ref": "#/definitions/models.Transcoder"
                         }
                     },
                     "400": {
-                        "description": "Failure to parse the cid",
+                        "description": "Failure to parse the id",
                         "schema": {
                             "$ref": "#/definitions/server.ErrorResponse"
                         }
                     },
                     "404": {
-                        "description": "Failure to find the cid",
+                        "description": "Failure to find the id",
                         "schema": {
                             "$ref": "#/definitions/server.ErrorResponse"
                         }
@@ -129,6 +129,17 @@
         }
     },
     "definitions": {
+        "models.Transcoder": {
+            "type": "object",
+            "properties": {
+                "_id": {
+                    "type": "string"
+                },
+                "percentage": {
+                    "type": "integer"
+                }
+            }
+        },
         "server.ErrorResponse": {
             "type": "object",
             "properties": {
@@ -147,17 +158,6 @@
                     "type": "string"
                 },
                 "id": {
-                    "type": "string"
-                }
-            }
-        },
-        "transcoder.TranscodeStatus": {
-            "type": "object",
-            "properties": {
-                "percentage": {
-                    "type": "integer"
-                },
-                "status": {
                     "type": "string"
                 }
             }
